--- a/org.talend.rcp.branding.tom/content/root.css
+++ b/org.talend.rcp.branding.tom/content/root.css
@@ -1,151 +1,95 @@
-/* classes générales */
-html, body{
-margin:0; 
-padding:0;
-background-color:#7E7E81;
-font-family:Arial, Helvetica, sans-serif;
-}
+/** Copyright Talend **/
+html, body {margin: 0; padding: 0; height: 100%; border:0;}
 
-#cadre{
-	width:769px;
-	margin:100px auto;
-	padding:0;
-	background-color:#FFFFFF;
-}
-
-#cadreInner{
-	width:700px;
-	margin:15px auto;
-	padding:12px 0 0 0;
-	background:url(imgs/innertop.gif) top center no-repeat;
-	
-}
-
-#innercorps{
-background:url(imgs/innerbottom.gif) bottom center no-repeat;
-padding:0 15px 15px 15px;
-
-}
-
-#tophead img{
-	float:left;
-	margin:0;
-	padding:0;
-	border:0;
-	}
-
-h1{
-margin:0 0 15px 0;
-padding:15px 0 0 0;
-font-size:16px;
-color:#0062A3;
-font-weight:bold;
-text-align:center;
-}
-
-h2{
-margin:0 0 15px 0;
-padding:15px 0 0 0;
-font-size:13px;
-color:#0062A3;
-font-weight:bold;
-text-align:left;
-}
-
-#cadreFoot{
-width:769px;
-height:22px;
-background:url(imgs/cadreFoot.gif) no-repeat bottom left;
-}
-
-#Content{
-padding:0 20px;
-
-}
-
-#Start{
-text-align:center;
-}
- 
-
-
-ul {
-
-margin:0 0 0 20px;
-padding:0 10px;}
-
-li{margin:0;
-padding:0;}
-
-a:visited
-	{
-		text-decoration: none;
-		/* color: #808080; */
-	}
-	a:hover
-	{
-		text-decoration: none;
-		/* color: #808080; */
-	}
-	a.souligne:link {
-		text-decoration: underline;
-		font-weight: bold;
-	}
-	a.souligne:visited {
-		text-decoration: underline;
-		font-weight: bold;
-	}
-
-HR{ color: #CCC; background-color:#CCC; height: 1px; border: 0; }
-/* classes mise en forme */
-.recherche	{ font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#666; border: 1px solid #BBB; }
-.tableUnder	{ float:left; }
-.cadreVert	{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#000; font-style:italic; text-align:left; }
-.lienso {text-decoration: underline; }
-/* classes textes */
-.borderleft		{ background-image:url('imgs/left.gif'); }
-.borderright	{ background-image:url('imgs/right.gif'); }
-.bordertop		{ background-image:url('imgs/top.gif'); }
-.borderbottom	{ background-image:url('imgs/bottom.gif'); }
-.texteHeader	{ background-image:url('imgs/fondHeader.gif'); }
-.footer			{  font-size:11px; color:#5E5E61; text-align:center; height:29px; padding:10px 0 0 0; }
-.cadreGras		{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#96DC19; font-weight:bold; }
-.titreContenu	{ font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#5E5E61; font-weight:bold; text-align:left; }
-.contenu		{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5E5E61; text-align:left; }
-.contenuGras	{ font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#0060A1; font-weight:bold; }
-.arianne		{ font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#5E5E61; text-align:left; }
-.typoSmall		{ font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#5E5E61; text-align:left; }
-.titreJob		{ font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#333; font-weight:bold; text-align:left; text-decoration: none; }
-/* classes images */
-
-/* classes liens */
-.lienHeader			{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5E5E61; text-decoration:none; }
-.lienHeader:hover	{ text-decoration:underline; }
-.lienArianne		{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5E5E61; text-decoration:underline; }
-.lienArianne:hover	{ text-decoration:underline; color: #808080;}
-.lienContenu		{ font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#558300; text-decoration:underline; font-weight:bold; }
-.lienContenu:hover	{ font-weight:bold; color:#96DC19; }
-/* Cadres arrondies */
-#cadre1 {
-	width:242px;
-	padding-top:18px;
-	margin-right:8px;
-	background:url(imgs/topCadre1.gif) left top no-repeat;
-	float:left;
-}
-#cadre1 div.contenu {
-	background:url(imgs/fondCadre.gif) left top no-repeat;
-	height:85px; /* A faire varier pour changer la hauteur du cadre */
-}
-#cadre1 p {
-	margin:0 10px 0 30px;
-	text-align:left;
+body {
+	margin:0 !important;
+	padding:0 !important;
+	height:100%;	
 	font-family:Arial, Helvetica, sans-serif;
-	font-size:12px;
+	font-size: 0.8125em;
+	font-weight:normal;
+	color:#5B5B5D !important;
+	background-color:#FFFFFF !important;
 }
 
-#cadre1Fin {
-	background:url(imgs/footerCadre.gif) no-repeat;
-	width:242px;
+h1 {
+	font: bold 24px Verdana, Arial, Helvetica, sans-serif;
+	color: #8F8F8F;
+	margin: 0px;
+	padding: 0px 0px 0px 15px;
 }
-/* Fin Cadres arrondies */
+h2 {
+    font: italic 24px Verdana, Arial, Helvetica, sans-serif;
+    color: #8F8F8F;
+    margin: 0px;
+    padding: 0px 0px 0px 15px;
+}
+
+img {
+	border:0;
+}
+
+li{	margin:0; padding:0;}
+ul{margin-top:0;}
+
+div#logoTalend	{position:absolute;top:5px;left:7px; padding:0; margin:0;}
+
+div#page {position: relative; min-height: 100%;}
+	
+div#header {height: 100px;background:#FFFFFF;}
+
+
+div#contenu {padding: 1px 0;margin: 0;height:100%;}
+	
+div#footer1 {height: 30px;clear: both;}	
+
+div#footer2 {
+	position: absolute;
+	bottom: 0; left: 0;
+	width: 100%;
+	height: 28px;
+	line-height: 28px; text-align: center;
+	background:#E7E7E7;
+	vertical-align:middle;
+	color:#666666 !important;
+	font-family:Arial, Helvetica, sans-serif !important ;
+	font-size:1.1em !important;
+}
+	
+div#footer2 a{text-decoration:none; color:#666666; }
+
+.title_welcome{
+	border-bottom:dashed 1px; 
+	font-size:22px; 
+	font-weight:bolder; 
+	padding-bottom:2px;
+	color: #8F8F8F; !important;
+}
+
+.doc-section{
+	padding-left: 50px;
+	height:56px;
+    background: url(imgs/logo_doc.png);
+    background-repeat:no-repeat;
+}
+html>body .doc-section {
+    min-height:56px;
+}
+.community-section{
+    padding-left: 50px;
+    height:56px;
+    background: url(imgs/logo_forum.png);
+    background-repeat:no-repeat;
+}
+html>body .community-section{
+    min-height:56px;
+}
+
+A:link,A:visited {
+	text-decoration:none;
+}
+A:hover{
+	text-decoration:underline;
+}
+
+.textBox{padding:15px;}
